syntax = "proto3";

package service.ourchat.session.add_role.v1;

message AddRoleRequest {
  optional string description = 1;
  repeated uint64 permissions = 2;
  string name = 3;
  // the session it belongs to
  uint64 session_id = 4;
}

message AddRoleResponse {
  uint64 role_id = 1;
}
